--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ticking Clock</title>
-    <style> body {padding: 0; margin: 0;} </style>
-    <script src="p5.js"></script>
-    <script src="sketch.js"></script>
-    <script src="p5.sound.min.js"></script>
-  </head>
-  <body>
-  </body>
+<html>
+<head>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+</head>
+<body>
+    <div id="index" class="settings-box">
+        <h2 class="title">Go Swole</h2>
+        <div>
+            <a class="waves-effect waves-light btn" href="pages/login.html">Login</a>
+            <a class="waves-effect waves-light btn" href="pages/register.html">Register</a>            
+        </div>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</body>
 </html>
