--- a/pages/availability-detail.html
+++ b/pages/availability-detail.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title>Swole</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" media="screen,projection">
     <link rel="stylesheet" href="../css/style.css">
@@ -17,7 +18,7 @@
             <div class="collapsible-body">
                 <div>
                     <i class="material-icons left">place</i>
-                    <span>Dodge fittness center floor 4</span>
+                    <span>Dodge fitness center floor 4</span>
                 </div>
                 <br/>
                 <div>
@@ -31,7 +32,7 @@
             <div class="collapsible-body">
                 <div>
                     <i class="material-icons left">place</i>
-                    <span>Dodge fittness center floor 3</span>
+                    <span>Dodge fitness center floor 3</span>
                 </div>
                 <br/>
                 <div>
