improve imput experience

--- a/pages/register.html
+++ b/pages/register.html
@@ -41,6 +41,7 @@
                             <div class="input-field col s12">
                                 <input id="email" type="email" class="validate">
                                 <label for="email">Email</label>
+                                <span class="helper-text" data-error="invalid email" data-success="correct"></span>
                             </div>
                         </div>
                         <div class="row">
