--- a/pages/settings.html
+++ b/pages/settings.html
@@ -41,6 +41,7 @@
                         <i class="material-icons prefix">email</i>
                         <input id="icon_email" type="email" class="validate">
                         <label for="icon_email">Email</label>
+                        <span class="helper-text" data-error="invalid email" data-success="correct"></span>
                     </div>
                 </div>
                 <div class="row">
